--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,11 @@
   <script src="https://kit.fontawesome.com/41e01c9565.js" crossorigin="anonymous"></script>
 
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 
